Add first PACT test